# raytracer

./: .gitignore  Cargo.toml  README.md  flake.nix
.run/: Run.run.xml  Test.run.xml
resources/hdri/: drakensberg_solitary_mountain_puresky_4k.hdr
src/: background.rs  bvh.rs  camera.rs  color.rs  hit.rs  image.rs  main.rs  material.rs  math.rs  quad.rs  ray.rs  scene.rs  sphere.rs  texture.rs  ui.rs  vec.rs  viewport.rs
src/background/: background_color.rs  hdri.rs
src/hit/: box.rs  bvh.rs  quad.rs  scene.rs  sphere.rs  transform.rs
src/material/: dielectric.rs  lambertian.rs  light.rs  metal.rs
src/math/: aabb.rs  interval.rs  perlin.rs
src/texture/: checker.rs  image.rs  noise.rs  solid_color.rs
